# ozondropbot

./: README.md  pyproject.toml  requirements.txt
src/ozondropbot/: config.py  db.py  main.py  scheduler.py
src/ozondropbot/handlers/: commands.py
src/ozondropbot/keyboards/: common.py
src/ozondropbot/services/: drops.py  graph.py  ozon.py
tests/: test_ozon.py
